<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_contenidos"
    android:layout_marginBottom="56dp"
    tools:context=".Publicar">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/bg_descripc_contacto"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:lines="3"
                    android:padding="8sp"
                    android:textColor="@color/white"
                    android:text="@string/descripcion_contacto"
                    android:textSize="16sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:layout_marginTop="8sp"
                android:background="@drawable/border_input"
                android:ems="10"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/color_textHint_input" />

            <EditText
                android:id="@+id/email"
                style="@style/Widget.AppCompat.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:layout_marginTop="8sp"
                android:background="@drawable/border_input"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:textColorHint="@color/color_textHint_input" />

            <EditText
                android:id="@+id/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:layout_marginTop="8sp"
                android:background="@drawable/border_input"
                android:ems="10"
                android:hint="@string/tel_fono"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/color_textHint_input" />

            <EditText
                android:id="@+id/mensaje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginLeft="8sp"
                android:layout_marginRight="8sp"
                android:layout_marginTop="8sp"
                android:background="@drawable/border_input"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/mensaje"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/color_textHint_input"
                android:lines="3" />

            <Button
                android:id="@+id/enviarBtn"
                android:layout_width="120sp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginBottom="10sp"
                android:layout_marginEnd="8sp"
                android:layout_marginTop="14sp"
                android:background="@drawable/boton_enviar"
                android:text="@string/enviar"
                android:textColor="@color/color_text_btn_enviar" />



        </LinearLayout>
    </ScrollView>

</FrameLayout>